test/error/parse/ExpectAssign.mod
MODULE ExpectAssign;
VAR a: INTEGER;
BEGIN
  a 1;
END ExpectAssign.
